[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech affiliations"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "get_papers" }]

[tool.poetry.scripts]
get-papers-list = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
typer = {extras = ["all"], version = "^0.12.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"